33 KeycloakJwtTokenConverter does not extract the roles (#34)
* removed isAdmin boolean from user table & general refactoring. There are some issues with the security

* fixed url in the security config

* refactoring